# qt-two-and-one-pass-assempler

./: .gitignore
lab1/: CMakeLists.txt  README.md
lab1/include/assembler/: assembler.h
lab1/include/structures/: codeline.h  symbolicname.h
lab1/include/ui/: mainwindow.h
lab1/src/: main.cpp
lab1/src/assembler/: assembler.cpp
lab1/src/exceptions/: assemblerexception.cpp
lab1/src/parser/: parser.cpp
lab1/src/structures/: symbolicname.cpp
lab1/src/ui/: mainwindow.cpp  mainwindow.ui
lab2/: README.md
lab2/include/assembler/: assembler.h
lab2/include/exceptions/: assemblerexception.h
lab2/include/structures/: command.h
lab2/include/ui/: mainwindow.h
lab2/src/assembler/: assembler.cpp
lab2/src/ui/: mainwindow.cpp
lab3/: CMakeLists.txt  README.md
lab3/include/assembler/: assembler.h
lab3/include/parser/: parser.h
lab3/include/structures/: operand.h  section.h  symbolicname.h  tnline.h
lab3/include/ui/: mainwindow.h
lab3/src/assembler/: assembler.cpp
lab3/src/parser/: parser.cpp
lab3/src/structures/: codeline.cpp  command.cpp  operand.cpp  section.cpp  symbolicname.cpp  tnline.cpp
lab3/src/ui/: mainwindow.cpp  mainwindow.ui
lab4/: MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md
lab4/assembler/: Assembler.cpp  Assembler.h  CodeLine.h  Command.h  CommandDto.cpp  CommandDto.h  SymbolicName.cpp
lab4/helpers/: Comparer.cpp  Comparer.h  Parser.cpp
lab5/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
lab5/assembler/: Assembler.cpp  Assembler.h  AssemblerException.cpp  AssemblerException.h  CodeLine.cpp  Command.cpp  SymbolicName.h
lab5/helpers/: Parser.h
